Add primaryEmail scalar field for UC-6/UC-7 queries
- Change json_textcontains to use $.primaryEmail instead of $.emails[0].emailAddress
- Add migration script to extract primaryEmail from emails array
- Update UC_UNIFIED_SUMMARY.md with MongoDB $sql benchmark results
- Update README.md with mongo-sql command documentation

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>